test/invalid/syntactic/unclosed_bracket.sysml
// INVALID: unclosed multiplicity bracket
// EXPECTED: Parse error
part wheels : Wheel[4;
